test/conformance/chainsaw/namespaced-deleting-policies/rbac-missing/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: rbac-missing-configmap
  namespace: ndpol-rbac-missing
data:
  key: value
